<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50EADD"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCorreu"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/correu_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTruco2"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/btnCorreu2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:text="@string/correu_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <TextView
        android:id="@+id/PlacartimeA"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_0"
        android:textSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/TimeB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_b"
        android:textColor="#030B37"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/TimeA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#50E9DC"
        android:text="@string/time_a2"
        android:textColor="#031468"
        android:textColorHighlight="#F32121"
        android:textColorHint="#B83F3F"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/PlacartimeB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_02"
        android:textSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/PlacartimeA"
        app:layout_constraintTop_toBottomOf="@+id/TimeB"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/btnTruco"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/truco_34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTruco2"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnTruco2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:text="@string/truco_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/reiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />
</androidx.constraintlayout.widget.ConstraintLayout>